# my-projects

./: .gitignore  README.md
ai-agents/chess-ai/: .gitignore  AGENTS.md  CONTEXT.md  PROJECT_STRUCTURE.md  README.md  main.py  pyproject.toml  requirements.txt
ai-agents/chess-ai/.scratch/: README.md
ai-agents/chess-ai/config/: .env.example  config.yaml  logging.yaml
ai-agents/chess-ai/docs/: README.md
ai-agents/chess-ai/docs/adr/: README.md
ai-agents/chess-ai/docs/agents/: domain.md  issue-tracker.md  triage-labels.md
ai-agents/chess-ai/docs/design/: ARCHITECTURE.md  prompt_engineering_log.md
ai-agents/chess-ai/docs/guides/: CONTRIBUTING.md  DEPLOYMENT.md  USER_GUIDE.md
ai-agents/chess-ai/scripts/: run_tests.sh  setup.sh
web-apps/campus-storage/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_server.py  流动人群物品暂存平台_项目文档.md  订单状态机设计文档.md
web-apps/campus-storage/admin/: index.html
web-apps/campus-storage/cloudfunctions/: .env.example  README.md
web-apps/campus-storage/docs/: 00_项目盘查报告.md  01_产品需求文档_PRD.md  02_系统设计说明书_SDD.md  03_UI设计说明.md  04_数据库设计文档.md  05_API接口文档.md  06_云函数设计文档.md  07_定时任务设计文档.md  08_测试计划与测试用例.md  09_部署与运维说明.md  10_项目复盘与踩坑记录.md  11_开发任务拆分.md  12_集成测试报告.md  13_前后端联调测试指南.md  14_生产部署检查清单.md
web-apps/campus-storage/miniprogram/: app.js  app.json  app.wxss  config.js  project.config.json  project.private.config.json
web-apps/campus-storage/scripts/: deploy_cloudfunctions.py  full_deploy.py  init_db.py  migrate_to_cloudbase.py  seed_data.py  verify_migration.py
web-apps/campus-storage/src/: app.py  config.py
web-apps/campus-storage/tasks/: plan.md  todo.md
web-apps/campus-storage/tests/: test_addresses.py  test_auth.py  test_db_adapter.py  test_errors.py  test_integration.py  test_optimistic_lock.py  test_order_service.py  test_order_state.py  test_payment_service.py  test_permission.py  test_routes.py  test_timeout_tasks.py  test_validator.py  test_warehouses.py
(+815 files in other folders)
